--- a/TrucuFrontEnd/src/app/modules/publication/view-publication/view-publication.component.html
+++ b/TrucuFrontEnd/src/app/modules/publication/view-publication/view-publication.component.html
@@ -36,6 +36,17 @@
       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
     </svg>
   </button>
+
+  <div class="flex" *ngFor="let offerWrapper of offersWrapper">
+    <div class="flex flex-col">
+      <label *ngFor="let publication of offerWrapper.offeredPublications" [routerLink]="['viewPublication',publication.idPublication]">{{publication.title}}</label>
+    </div>
+    <div class="flex flex-col">
+      <button class="bg-green-500" (click)="AcceptOffer(offerWrapper.offer.idOffer)">Aceptar</button>
+      <button class="bg-red-500" (click)="Reject(offerWrapper.offer.idOffer)">Rechazar</button>
+      <button class="bg-blue-500">ContraOfertar</button>
+    </div>
+  </div>
 </div>
 
 <app-create-offer [publication]="wrapper.publication" [showModal]="showOffer"></app-create-offer>
