--- a/TrucuFrontEnd/src/app/modules/offer/view-my-offers/view-my-offers.component.html
+++ b/TrucuFrontEnd/src/app/modules/offer/view-my-offers/view-my-offers.component.html
@@ -1,18 +1,31 @@
 <div class="flex flex-col w-full mt-14">
     <div class="flex flex-col bg-white mr-16 ml-16 p-4 rounded mt-16">
-        <div *ngFor="let wrapper of currentPage.content;" class="flex border-t-2 border-gray-500 cursor-pointer">
-            <label>Ofertaste a {{wrapper.publication.title}} con tus siguientes publicaciones: </label>
-            <div class="flex flex-col" *ngFor="let offeredPublication of wrapper.offeredPublications">
-                <label>{{offeredPublication.title}}</label>
+        <label>Mis ofertas</label>
+        <div *ngFor="let wrapper of currentPage.content;" class="flex flex-row border-t-2 border-gray-500">
+            <div class="flex flex-col flex-grow">
+                <div class="flex flex-row">
+                    <label>Ofertaste a</label>
+                    <label class="ml-1 mr-1 cursor-pointer underline" [routerLink]="['viewPublication',wrapper.publication.idPublication]">{{wrapper.publication.title}}</label>
+                    <label>con tus siguientes publicaciones:</label>
+                </div>
+                <div class="flex flex-row" *ngFor="let offeredPublication of wrapper.offeredPublications">
+                    <label class="cursor-pointer text-blue-500" [routerLink]="['viewPublication',offeredPublication.idPublication]">{{offeredPublication.title}}</label>
+                </div>
             </div>
-            <button class="bg-red-500" (click)="cancelOffer(wrapper.offer.id)">Cancelar oferta</button>
+            <div class="flex justify-end items-center	">
+                <button type="button" (click)="cancelOffer(wrapper.offer.idOffer)"
+                class="h-1/2 transition duration-200 bg-red-500 hover:bg-red-600 focus:bg-red-700 focus:shadow-sm focus:ring-4 focus:ring-red-500 focus:ring-opacity-50 text-white w-full py-2.5 rounded-lg text-sm shadow-sm hover:shadow-md font-semibold text-center inline-block">
+                    <span class="inline-block m-2">Cancelar</span>
+                </button>
+            </div>
         </div>
     </div>
 
     <div class="flex flex-row justify-center p-4" style="align-items: baseline;">
+        <button *ngIf="currentPage.pageNumber != 0" class="paginationTotal text-red-500" (click)="previousPage()">< Atras</button>
         <label class="paginationActual m-2">{{currentPage.pageNumber + 1}}</label>
         <label class="paginationTotal m-2"> de {{currentPage.totalPages}}</label>
-        <button *ngIf="currentPage.pageNumber < currentPage.pageNumber" class="paginationTotal ml-2 text-red-500" (click)="nextPage()">Siguiente ></button>
+        <button *ngIf="currentPage.pageNumber < currentPage.totalPages" class="paginationTotal ml-2 text-red-500" (click)="nextPage()">Siguiente ></button>
 
     </div>
     
