--- a/TrucuFrontEnd/src/app/modules/publication/view-publication/view-publication.component.html
+++ b/TrucuFrontEnd/src/app/modules/publication/view-publication/view-publication.component.html
@@ -46,11 +46,12 @@
         </div>
     </div>
     <div *ngIf="wrapper.offer.status == 'SETTLING'" class="flex flex-col justify-end items-center">
-      <button type="button" (click)="AcceptOffer(wrapper.offer.idOffer)"
+      <button type="button" (click)="ViewAccountData(wrapper.offeredPublications[0].accountEmail)"
       class="m-2 transition duration-200 bg-gray-400 hover:bg-gray-500 focus:bg-gray-600 focus:shadow-sm focus:ring-4 focus:ring-gray-400 focus:ring-opacity-50 text-white w-full py-2.5 rounded-lg text-sm shadow-sm hover:shadow-md font-semibold text-center inline-block">
           <span class="inline-block m-2">Ver datos</span>
       </button>
-      <button type="button" (click)="Reject(wrapper.offer.idOffer)"
+      
+      <button type="button" (click)="RevertOffer(wrapper.offer.idOffer)"
         class="m-2 transition duration-200 bg-red-500 hover:bg-red-600 focus:bg-red-700 focus:shadow-sm focus:ring-4 focus:ring-red-500 focus:ring-opacity-50 text-white w-full py-2.5 rounded-lg text-sm shadow-sm hover:shadow-md font-semibold text-center inline-block">
             <span class="inline-block m-2">Deshacer</span>
       </button>
@@ -73,3 +74,4 @@
 </div>
 
 <app-create-offer [publication]="wrapper.publication" [showModal]="showOffer"></app-create-offer>
+<app-view-account [accountEmail]="accountEmail" [showModal]="showAccountData" (toggle)="toggleshowAccountData()"></app-view-account>
