--- a/TrucuFrontEnd/src/app/modules/offer/view-my-offers/view-my-offers.component.html
+++ b/TrucuFrontEnd/src/app/modules/offer/view-my-offers/view-my-offers.component.html
@@ -12,9 +12,23 @@
                     <label class="cursor-pointer text-blue-500" [routerLink]="['viewPublication',offeredPublication.idPublication]">{{offeredPublication.title}}</label>
                 </div>
             </div>
-            <div class="flex justify-end items-center	">
+            <div class="flex justify-end items-center" *ngIf="wrapper.offer.status != 'SETTLING'">
                 <button type="button" (click)="cancelOffer(wrapper.offer.idOffer)"
                 class="h-1/2 transition duration-200 bg-red-500 hover:bg-red-600 focus:bg-red-700 focus:shadow-sm focus:ring-4 focus:ring-red-500 focus:ring-opacity-50 text-white w-full py-2.5 rounded-lg text-sm shadow-sm hover:shadow-md font-semibold text-center inline-block">
+                    <span class="inline-block m-2">Cancelar</span>
+                </button>
+            </div>
+            <div *ngIf="wrapper.offer.status == 'SETTLING'" class="flex flex-col justify-end items-center" >
+                <button type="button" (click)="ViewAccountData(wrapper.publication.accountEmail)"
+                    class="m-2 transition duration-200 bg-gray-400 hover:bg-gray-500 focus:bg-gray-600 focus:shadow-sm focus:ring-4 focus:ring-gray-400 focus:ring-opacity-50 text-white w-full py-2.5 rounded-lg text-sm shadow-sm hover:shadow-md font-semibold text-center inline-block">
+                    <span class="inline-block m-2">Ver datos</span>
+                </button>
+                <button type="button" (click)="closeOffer(wrapper.offer.idOffer)"
+                class="m-2 transition duration-200 bg-green-500 hover:bg-green-600 focus:bg-green-700 focus:shadow-sm focus:ring-4 focus:ring-green-500 focus:ring-opacity-50 text-white w-full py-2.5 rounded-lg text-sm shadow-sm hover:shadow-md font-semibold text-center inline-block">
+                    <span class="inline-block m-2">Finalizar</span>
+                </button>
+                <button type="button" (click)="cancelOffer(wrapper.offer.idOffer)"
+                class="m-2 transition duration-200 bg-red-500 hover:bg-red-600 focus:bg-red-700 focus:shadow-sm focus:ring-4 focus:ring-red-500 focus:ring-opacity-50 text-white w-full py-2.5 rounded-lg text-sm shadow-sm hover:shadow-md font-semibold text-center inline-block">
                     <span class="inline-block m-2">Cancelar</span>
                 </button>
             </div>
@@ -30,3 +44,4 @@
     </div>
     
 </div>
+<app-view-account [accountEmail]="accountEmail" [showModal]="showAccountData" (toggle)="toggleshowAccountData()"></app-view-account>
