Made counter offer from original publisher

--- a/TrucuFrontEnd/src/app/modules/publication/view-publication/view-publication.component.html
+++ b/TrucuFrontEnd/src/app/modules/publication/view-publication/view-publication.component.html
@@ -56,7 +56,7 @@
             <span class="inline-block m-2">Deshacer</span>
       </button>
     </div>
-    <div *ngIf="wrapper.offer.status != 'SETTLING'" class="flex flex-col justify-end items-center" >
+    <div *ngIf="wrapper.offer.status != 'SETTLING' && wrapper.offer.status != 'CHANGED'" class="flex flex-col justify-end items-center" >
         <button type="button" (click)="AcceptOffer(wrapper.offer.idOffer)"
         class="m-2 transition duration-200 bg-green-500 hover:bg-green-600 focus:bg-green-700 focus:shadow-sm focus:ring-4 focus:ring-green-500 focus:ring-opacity-50 text-white w-full py-2.5 rounded-lg text-sm shadow-sm hover:shadow-md font-semibold text-center inline-block">
             <span class="inline-block m-2">Aceptar</span>
@@ -65,13 +65,20 @@
         class="m-2 transition duration-200 bg-red-500 hover:bg-red-600 focus:bg-red-700 focus:shadow-sm focus:ring-4 focus:ring-red-500 focus:ring-opacity-50 text-white w-full py-2.5 rounded-lg text-sm shadow-sm hover:shadow-md font-semibold text-center inline-block">
             <span class="inline-block m-2">Rechazar</span>
         </button>
-        <button type="button" 
+        <button type="button" (click)="CounterOffer(wrapper.offeredPublications[0].accountEmail, wrapper.offer)"
         class="m-2 transition duration-200 bg-blue-500 hover:bg-blue-600 focus:bg-blue-700 focus:shadow-sm focus:ring-4 focus:ring-blue-500 focus:ring-opacity-50 text-white w-full py-2.5 rounded-lg text-sm shadow-sm hover:shadow-md font-semibold text-center inline-block">
             <span class="inline-block m-2">Contraofertar</span>
         </button>
     </div>
+    <div *ngIf="wrapper.offer.status == 'CHANGED'" class="flex flex-col justify-end items-center" >
+      <button type="button" (click)="Reject(wrapper.offer.idOffer)"
+        class="m-2 transition duration-200 bg-red-500 hover:bg-red-600 focus:bg-red-700 focus:shadow-sm focus:ring-4 focus:ring-red-500 focus:ring-opacity-50 text-white w-full py-2.5 rounded-lg text-sm shadow-sm hover:shadow-md font-semibold text-center inline-block">
+            <span class="inline-block m-2">Rechazar</span>
+        </button>
+  </div>
     
 </div>
 
 <app-create-offer [publication]="wrapper.publication" [showModal]="showOffer"></app-create-offer>
 <app-view-account [accountEmail]="accountEmail" [showModal]="showAccountData" (toggle)="toggleshowAccountData()"></app-view-account>
+<app-create-counter-offer [accountEmail]="accountEmail" [offer]="currentOffer" [showModal]="showCounterOffer"></app-create-counter-offer>
