--- a/TrucuFrontEnd/src/app/modules/offer/view-my-offers/view-my-offers.component.html
+++ b/TrucuFrontEnd/src/app/modules/offer/view-my-offers/view-my-offers.component.html
@@ -3,19 +3,34 @@
         <label>Mis ofertas</label>
         <div *ngFor="let wrapper of currentPage.content;" class="flex flex-row border-t-2 border-gray-500">
             <div class="flex flex-col flex-grow">
-                <div class="flex flex-row">
+                <div class="flex flex-row" *ngIf="wrapper.offer.status != 'CHANGED'">
                     <label>Ofertaste a</label>
                     <label class="ml-1 mr-1 cursor-pointer underline" [routerLink]="['viewPublication',wrapper.publication.idPublication]">{{wrapper.publication.title}}</label>
                     <label>con tus siguientes publicaciones:</label>
+                </div>
+                <div class="flex flex-row" *ngIf="wrapper.offer.status == 'CHANGED'">
+                    <label>Tu oferta realizada a </label>
+                    <label class="ml-1 mr-1 cursor-pointer underline" [routerLink]="['viewPublication',wrapper.publication.idPublication]">{{wrapper.publication.title}}</label>
+                    <label>fue contra ofertada con las siguientes publicaciones: </label>
                 </div>
                 <div class="flex flex-row" *ngFor="let offeredPublication of wrapper.offeredPublications">
                     <label class="cursor-pointer text-blue-500" [routerLink]="['viewPublication',offeredPublication.idPublication]">{{offeredPublication.title}}</label>
                 </div>
             </div>
-            <div class="flex justify-end items-center" *ngIf="wrapper.offer.status != 'SETTLING'">
+            <div class="flex justify-end items-center" *ngIf="wrapper.offer.status != 'SETTLING' && wrapper.offer.status != 'CHANGED'">
                 <button type="button" (click)="cancelOffer(wrapper.offer.idOffer)"
                 class="h-1/2 transition duration-200 bg-red-500 hover:bg-red-600 focus:bg-red-700 focus:shadow-sm focus:ring-4 focus:ring-red-500 focus:ring-opacity-50 text-white w-full py-2.5 rounded-lg text-sm shadow-sm hover:shadow-md font-semibold text-center inline-block">
                     <span class="inline-block m-2">Cancelar</span>
+                </button>
+            </div>
+            <div class="flex flex-col justify-end items-center" *ngIf="wrapper.offer.status == 'CHANGED'">
+                <button type="button" (click)="acceptCounterOffer(wrapper.offer.idOffer)"
+                    class="m-2 transition duration-200 bg-green-500 hover:bg-green-600 focus:bg-green-700 focus:shadow-sm focus:ring-4 focus:ring-green-500 focus:ring-opacity-50 text-white w-full py-2.5 rounded-lg text-sm shadow-sm hover:shadow-md font-semibold text-center inline-block">
+                    <span class="inline-block m-2">Aceptar</span>
+                </button>
+                <button type="button" (click)="rejectCounterOffer(wrapper.offer.idOffer)"
+                    class="m-2 transition duration-200 bg-red-500 hover:bg-red-600 focus:bg-red-700 focus:shadow-sm focus:ring-4 focus:ring-red-500 focus:ring-opacity-50 text-white w-full py-2.5 rounded-lg text-sm shadow-sm hover:shadow-md font-semibold text-center inline-block">
+                    <span class="inline-block m-2">Rechazar</span>
                 </button>
             </div>
             <div *ngIf="wrapper.offer.status == 'SETTLING'" class="flex flex-col justify-end items-center" >
