--- a/TrucuFrontEnd/src/app/modules/publication/view-publication/view-publication.component.html
+++ b/TrucuFrontEnd/src/app/modules/publication/view-publication/view-publication.component.html
@@ -4,7 +4,7 @@
       <label class="block uppercase tracking-wide text-gray-700 text-lg font-bold mb-2 flex-grow" for="grid-first-name">
         {{wrapper.publication.title}}
       </label>
-      <img class="flex cursor-pointer w-8 justify-end" src="./assets/images/report-icon.png">
+      <img class="flex cursor-pointer w-8 justify-end" src="./assets/images/report-icon.png" (click)="toggleShowReport()">
     </div>
   </div>
   <div class="flex flex-wrap -mx-3 mb-6">
@@ -75,7 +75,7 @@
       <button type="button" (click)="Reject(wrapper.offer.idOffer)"
         class="m-2 transition duration-200 bg-red-500 hover:bg-red-600 focus:bg-red-700 focus:shadow-sm focus:ring-4 focus:ring-red-500 focus:ring-opacity-50 text-white w-full py-2.5 rounded-lg text-sm shadow-sm hover:shadow-md font-semibold text-center inline-block">
             <span class="inline-block m-2">Rechazar</span>
-        </button>
+      </button>
   </div>
     
 </div>
