--- a/TrucuFrontEnd/src/app/modules/publication/create-publication/create-publication.component.html
+++ b/TrucuFrontEnd/src/app/modules/publication/create-publication/create-publication.component.html
@@ -1,5 +1,6 @@
 <div class="w-full max-w-lg m-auto mt-32 bg-white p-3 rounded-md" style="margin-top: 12rem !important;">
     <div class="flex flex-wrap -mx-3 mb-6">
+      <h1>Crear publicacion</h1>
       <div class="w-full px-3 mb-6 md:mb-0">
         <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-first-name">
           Titulo
