--- a/TrucuFrontEnd/src/app/modules/report/view-reports/view-reports.component.html
+++ b/TrucuFrontEnd/src/app/modules/report/view-reports/view-reports.component.html
@@ -1,8 +1,8 @@
 <div class="flex flex-col w-full mt-14">
     <div class="flex flex-col bg-white mr-16 ml-16 p-4 rounded mt-16">
-        <div *ngFor="let wrapper of currentPage.content;" class="flex border-t-2 border-gray-500 cursor-pointer" [routerLink]="['viewPublication',wrapper.publication.idPublication]">
-            <img class="w-64" src="{{wrapper.images[0].imageBytes}}">
-            <div class="flex flex-grow flex-col m-8">
+        <div *ngFor="let wrapper of currentPage.content;" class="flex border-t-2 border-gray-500 cursor-pointer">
+            <img class="w-64" src="{{wrapper.images[0].imageBytes}}"  [routerLink]="['viewPublication',wrapper.publication.idPublication]">
+            <div class="flex flex-grow flex-col m-8"  [routerLink]="['viewPublication',wrapper.publication.idPublication]">
                 <label class="publicationTitle">{{wrapper.publication.title}}</label>
                 <div class="flex flex-row">
                     <img class="w-8 cursor-pointer mr-2" src="assets/images/ucucoin-icon.png">
