--- a/TrucuFrontEnd/src/app/modules/home/home-screen/home-screen.component.html
+++ b/TrucuFrontEnd/src/app/modules/home/home-screen/home-screen.component.html
@@ -1,5 +1,6 @@
 <div class="flex flex-col w-full mt-14">
     <div class="flex flex-col bg-white mr-16 ml-16 p-4 rounded mt-16">
+        <h1>Pantalla principal</h1>
         <div *ngFor="let wrapper of currentPage.content;" class="flex border-t-2 border-gray-500 cursor-pointer" [routerLink]="['viewPublication',wrapper.publication.idPublication]">
             <img class="w-64" src="{{wrapper.images[0].imageBytes}}">
             <div class="flex flex-grow flex-col m-8">
@@ -13,10 +14,10 @@
     </div>
 
     <div class="flex flex-row justify-center p-4" style="align-items: baseline;">
+        <button *ngIf="currentPage.pageNumber > 0" class="paginationTotal ml-2 text-red-500" (click)="previousPage()">< Anterior</button>
         <label class="paginationActual m-2">{{currentPage.pageNumber + 1}}</label>
         <label class="paginationTotal m-2"> de {{currentPage.totalPages}}</label>
-        <button *ngIf="currentPage.pageNumber < currentPage.pageNumber" class="paginationTotal ml-2 text-red-500" (click)="nextPage()">Siguiente ></button>
-
+        <button *ngIf="(currentPage.pageNumber + 1) < currentPage.totalPages" class="paginationTotal ml-2 text-red-500" (click)="nextPage()">Siguiente ></button>
     </div>
     
 </div>
