--- a/TrucuFrontEnd/src/app/modules/login/login/login.component.html
+++ b/TrucuFrontEnd/src/app/modules/login/login/login.component.html
@@ -9,7 +9,7 @@
                 <div class="flex justify-end p-4">
                     <img class="w-4 cursor-pointer" src="assets/images/close-icon.png" (click)="toggleModal()">
                 </div>
-                <div class="p-10 xs:p-0 mx-auto md:w-full md:max-w-md sm:py-12">
+                <div class="p-10 xs:p-0 mx-auto md:w-full sm:py-12">
                     <div class="flex justify-center">
                         <img class="w-32" src="assets/images/logo_UCU.png">
                     </div>
@@ -29,14 +29,8 @@
                                 </svg>
                             </button>
                         </div>
-                        <div class="flex flex-col px-5 py-7" *ngIf="isCreating == true">
-                            <div class="flex flex-row m-4">
-                                <div class="flex flex-col pl-2">
-                                    <label class="font-semibold text-sm text-gray-600 pb-1 block">Fecha de nacimiento</label>
-                                    <input type="date" class="border rounded-lg px-3 py-2 mt-1 mb-5 text-sm w-full" [(ngModel)]="account.birthDate" >
-                                </div>
-                            </div>
-                            <div class="flex flex-row m-4">
+                        <div class="flex flex-col px-5 py-7" *ngIf="isCreating">
+                            <div class="flex flex-row mt-1">
                                 <div class="flex flex-col pr-2">
                                     <label class="font-semibold text-sm text-gray-600 pb-1 block">Nombre</label>
                                     <input type="text" class="border rounded-lg px-3 py-2 mt-1 mb-5 text-sm w-full" [(ngModel)]="account.name">
@@ -46,13 +40,19 @@
                                     <input type="text" class="border rounded-lg px-3 py-2 mt-1 mb-5 text-sm w-full" [(ngModel)]="account.lastName" >
                                 </div>
                             </div>
-                            <div class="flex flex-row m-4 w-full">
+                            <div class="flex flex-row mt-1 w-full">
                                 <div class="flex flex-col w-full">
                                     <label class="font-semibold text-sm text-gray-600 pb-1 block">E-mail</label>
                                     <input type="text" class="border rounded-lg px-3 py-2 mt-1 mb-5 text-sm w-full" [(ngModel)]="account.email" >    
                                 </div>
                             </div>
-                            <div class="flex flex-row m-4">
+                            <div class="flex flex-row mt-1">
+                                <div class="flex flex-col pl-2">
+                                    <label class="font-semibold text-sm text-gray-600 pb-1 block">Fecha de nacimiento</label>
+                                    <input type="date" class="border rounded-lg px-3 py-2 mt-1 mb-5 text-sm w-full" [(ngModel)]="account.birthDate" >
+                                </div>
+                            </div>
+                            <div class="flex flex-row mt-1">
                                 <div class="flex flex-col pr-2">
                                     <label class="font-semibold text-sm text-gray-600 pb-1 block">Contraseña</label>
                                     <input type="password" class="border rounded-lg px-3 py-2 mt-1 mb-5 text-sm w-full" [(ngModel)]="account.password" >
@@ -73,8 +73,8 @@
                             </button>
                         </div>
                         <div class="py-5">
-                            <div class="grid grid-cols-2 gap-1">
-                                <div class="text-center sm:text-left whitespace-nowrap">
+                            <div class="">
+                                <div class="text-center sm:text-left">
                                     <button (click)="toggleRegistration()"
                                         class="transition duration-200 mx-5 px-5 py-4 cursor-pointer font-normal text-sm rounded-lg text-gray-500 hover:bg-gray-100 focus:outline-none focus:bg-gray-200 focus:ring-2 focus:ring-gray-400 focus:ring-opacity-50 ring-inset">
                                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
@@ -82,18 +82,8 @@
                                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                                 d="M8 11V7a4 4 0 118 0m-4 8v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2z" />
                                         </svg>
-                                        <span class="inline-block ml-1">Registrarse</span>
-                                    </button>
-                                </div>
-                                <div class="text-center sm:text-right whitespace-nowrap">
-                                    <button
-                                        class="transition duration-200 mx-5 px-5 py-4 cursor-pointer font-normal text-sm rounded-lg text-gray-500 hover:bg-gray-100 focus:outline-none focus:bg-gray-200 focus:ring-2 focus:ring-gray-400 focus:ring-opacity-50 ring-inset">
-                                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                            stroke="currentColor" class="w-4 h-4 inline-block align-text-bottom	">
-                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                                d="M18.364 5.636l-3.536 3.536m0 5.656l3.536 3.536M9.172 9.172L5.636 5.636m3.536 9.192l-3.536 3.536M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-5 0a4 4 0 11-8 0 4 4 0 018 0z" />
-                                        </svg>
-                                        <span class="inline-block ml-1">Help</span>
+                                        <span class="inline-block ml-1" *ngIf="!isCreating">¿No tienes una cuenta? Registrate</span>
+                                        <span class="inline-block ml-1" *ngIf="isCreating">Volver</span>
                                     </button>
                                 </div>
                             </div>
