--- a/TrucuFrontEnd/src/styles.css
+++ b/TrucuFrontEnd/src/styles.css
@@ -5,10 +5,20 @@
 
 @import '~ngx-toastr/toastr';
 
+@import url('https://fonts.googleapis.com/css?family=Proxima+Nova');
+
 
 html,
 body {
   height: 100%;
+}
+
+h1{
+    font-size: 24px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 300;
+    line-height: 1.3;
+    color: #333;
 }
 
 .publicationTitle{
@@ -16,7 +26,7 @@ body {
     font-weight: 300;
     line-height: 1.3;
     color: #333;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Proxima Nova,-apple-system,Helvetica Neue,Helvetica,Roboto,Arial,sans-serif;
 }
 
 .price{
