Fixed design and created filters

--- a/TrucuFrontEnd/src/app/modules/offer/create-offer/create-offer.component.html
+++ b/TrucuFrontEnd/src/app/modules/offer/create-offer/create-offer.component.html
@@ -23,7 +23,7 @@
                         </div>
                         <button type="button"
                                 class="transition duration-200 bg-blue-500 hover:bg-blue-600 focus:bg-blue-700 focus:shadow-sm focus:ring-4 focus:ring-blue-500 focus:ring-opacity-50 text-white w-full py-2.5 rounded-lg text-sm shadow-sm hover:shadow-md font-semibold text-center inline-block">
-                                <span class="inline-block mr-2" (click)="createOffer()">Ofertas</span>
+                                <span class="inline-block mr-2" (click)="createOffer()">Ofertar</span>
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                     stroke="currentColor" class="w-4 h-4 inline-block">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
