--- a/TrucuFrontEnd/src/app/modules/login/login/login.component.html
+++ b/TrucuFrontEnd/src/app/modules/login/login/login.component.html
@@ -19,9 +19,9 @@
                             <input type="text" class="border rounded-lg px-3 py-2 mt-1 mb-5 text-sm w-full" [(ngModel)]="email">
                             <label class="font-semibold text-sm text-gray-600 pb-1 block">Password</label>
                             <input type="password" class="border rounded-lg px-3 py-2 mt-1 mb-5 text-sm w-full" [(ngModel)]="password" >
-                            <button type="button"
+                            <button type="button" (click)="login()"
                                 class="transition duration-200 bg-blue-500 hover:bg-blue-600 focus:bg-blue-700 focus:shadow-sm focus:ring-4 focus:ring-blue-500 focus:ring-opacity-50 text-white w-full py-2.5 rounded-lg text-sm shadow-sm hover:shadow-md font-semibold text-center inline-block">
-                                <span class="inline-block mr-2" (click)="login()">Login</span>
+                                <span class="inline-block mr-2">Login</span>
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                     stroke="currentColor" class="w-4 h-4 inline-block">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
