--- a/TrucuFrontEnd/src/app/modules/publication/publication-list/publication-list.component.html
+++ b/TrucuFrontEnd/src/app/modules/publication/publication-list/publication-list.component.html
@@ -1,6 +1,15 @@
 <div class="flex flex-col w-full mt-14">
     <div class="flex flex-col bg-white mr-16 ml-16 p-4 rounded mt-16">
-        <h1>Mis publicaciones</h1>
+        <div class="flex flex-row pb-8">
+            <div class="flex">
+                <h1>Mis publicaciones</h1>
+            </div>
+            <div class="flex flex-col pl-6 items-center relative justify-start">
+                <img src="../../../../assets/images/filter-circle-icon-green.svg" class="w-8 cursor-pointer" (click)="onToggleFilter($event)">
+                <h6 class="text-green-light font-gill">Filtrar</h6>
+                <app-publication-filter [showModal]="showFilter" (filteredElementsEvent)="onFilter($event)"></app-publication-filter>
+            </div>
+        </div>
         <div *ngFor="let wrapper of currentPage.content;" class="flex border-t-2 border-gray-500 cursor-pointer">
             <img class="w-64" src="{{wrapper.images[0].imageBytes}}" [routerLink]="['viewPublication',wrapper.publication.idPublication]">
             <div class="flex flex-grow flex-col m-8" [routerLink]="['viewPublication',wrapper.publication.idPublication]">
