--- a/TrucuFrontEnd/src/styles.css
+++ b/TrucuFrontEnd/src/styles.css
@@ -5,21 +5,52 @@
 
 @import '~ngx-toastr/toastr';
 
-@import url('https://fonts.googleapis.com/css?family=Proxima+Nova');
 
+@font-face {
+    font-family: futura;
+    src: local("futura"),
+      url(assets/fonts/AnyConv.com__Futura_Bold.ttf) format("truetype");
+}
+  
+@font-face {
+    font-family: lemon;
+    src: local("lemon"),
+        url(assets/fonts/LEMONMILK-Regular.ttf) format("truetype");
+}
 
 html,
 body {
   height: 100%;
 }
 
-h1{
-    font-size: 24px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 300;
-    line-height: 1.3;
-    color: #333;
-}
+h1 {
+    font-family: "lemon";
+  }
+  
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-family: "futura";
+  }
+  
+  h1 {
+    font-size: 28px;
+  }
+  
+  h2 {
+    font-size: 23px;
+  }
+  
+  h3 {
+    font-size: 20px;
+  }
+  
+  h4 {
+    font-size: 16px;
+  }
+
 
 .publicationTitle{
     font-size: 20px;
@@ -94,3 +125,8 @@ font-family: "Futura";
 margin-top: 3px;
 min-height: 1.8rem;
 }
+
+.btn-small {
+    padding: 2px 20px 2px 20px;
+    cursor: pointer;
+  }
